--- a/css/Style.css
+++ b/css/Style.css
@@ -47,5 +47,5 @@
       linear-gradient(90deg, #2c3539 2%, #282828 0, #282828 98%, #2c3539 0%) 0 0
         #282828;
     background-size: 40px 60px;
-  }
+  }/*Hemos elegido esto para en el caso de que haya un error cargando fondos que haya un diseño */
   
