--- a/css/Style.css
+++ b/css/Style.css
@@ -1,3 +1,16 @@
+*{
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+body{
+  
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  background: #000;
+}
+
 .container {
     width: 100%;
     height: 100%;
@@ -49,3 +62,16 @@
     background-size: 40px 60px;
   }/*Hemos elegido esto para en el caso de que haya un error cargando fondos que haya un diseño */
   
+  body{
+    margin: none;
+  }
+
+  .navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background: #06182b;
+    border-bottom: 2px solid #113a5c ;
+    margin: none;
+  }
