--- a/css/Style.css
+++ b/css/Style.css
@@ -71,7 +71,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background: #06182b;
+    background: #071729;
     border-bottom: 2px solid #113a5c ;
     margin: none;
   }
