--- a/css/Style.css
+++ b/css/Style.css
@@ -75,3 +75,13 @@ body{
     border-bottom: 2px solid #113a5c ;
     margin: none;
   }
+  .nav-links{
+    text-decoration: none solid rgb(255, 255, 255);
+    padding: 8px 16px;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+  }
+  .picture{
+    object-position: 100%;
+  }
