--- a/css/Style.css
+++ b/css/Style.css
@@ -83,5 +83,8 @@ body{
     font-weight: 400;
   }
   .picture{
-    object-position: 100%;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    object-position: center;
   }
