--- a/css/Style.css
+++ b/css/Style.css
@@ -84,7 +84,6 @@ body{
   }
   .picture{
     position: relative;
-    width: 100%;
-    height: 100vh;
-    object-position: center;
+    width:100%;
+    object-fit: cover;
   }
