--- a/css/Style.css
+++ b/css/Style.css
@@ -11,6 +11,10 @@ body{
   background: #000;
 }
 
+
+
+
+
 .container {
     width: 100%;
     height: 100%;
@@ -66,12 +70,40 @@ body{
     margin: none;
   }
 
+  .logo{
+    display: flex;
+    align-items: center;
+   
+  }
+  span.Titulo{
+    color:white;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-left: 20px;
+    font-size: 200%;
+
+  }
   .navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background: #06182b;
+    background: #0a0511;
     border-bottom: 2px solid #113a5c ;
     margin: none;
+    text-decoration: none;
+  }
+
+  .nav-links a{
+    text-decoration: none;
+    padding: 10px;
+    height: 100%;
+    color: white;
+    font-size: 14px;
+    transition: color 0.3s;
+  }
+
+  .nav-links a:hover{
+    color: #ffae00;
   }
