--- a/css/Style.css
+++ b/css/Style.css
@@ -94,7 +94,7 @@ body{
     background: #0a0511;
     border-bottom: 2px solid #113a5c ;
     margin: none;
-    text-decoration: none;
+    
   }/* para ajustar la barra de navegacion y sus contenidos*/
 
   .nav-links a{
@@ -110,11 +110,22 @@ body{
     color: #ffae00;
   }/*para ajustar el texto y generar una pequeña animación a la hora de poner el boton encima*/
 
+  a.actual-position{
+    text-decoration:none;
+    padding: 10px;
+    height: 100%;
+    color: #00ccff;
+    font-size: 14px;
+    transition: color 0.3s;
+  }
 
+  a.actual-position:hover{
+    color: white;
+  }
 
   .main-content{
 
-    background: linear-gradient( rgba(0, 0, 0, 0.925),rgba(0, 0, 0, 0.425),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgound_index.jpg) no-repeat center center/cover;
+    background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgound_index.jpg) no-repeat center center/cover;
     height: 90vh;
     display: flex;
     justify-content: center;
