--- a/css/Style.css
+++ b/css/Style.css
@@ -327,6 +327,7 @@ body{
   color: #ffae00;
 }
 .main-princ{
+  margin-top: 80px;
   background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)),;
   height: 90vh;
   display: flex;
