--- a/css/Style.css
+++ b/css/Style.css
@@ -326,7 +326,8 @@ body{
 .info-box a:hover{
   color: #ffae00;
 }
-.main-princ{
+.main-trabajo{
+  background-image: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);
   margin-top: 80px;
   background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)),;
   height: 90vh;
@@ -335,6 +336,8 @@ body{
   align-items:start;
   text-align: center;
   margin-bottom: 20px;
+  background: 100;
+
 }
 
 /*Inicio de subir curriculum*/
