--- a/css/Style.css
+++ b/css/Style.css
@@ -327,21 +327,21 @@ body{
   color: #ffae00;
 }
 .main-trabajo{
-  background-image: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);
-  margin-top: 80px;
+  background: radial-gradient(circle, #5c0067 10%, #00d4ff 100%);
+  background-size: cover;
   background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)),;
   height: 90vh;
   display: flex;
   justify-content: center;
   align-items:start;
   text-align: center;
-  margin-bottom: 20px;
   background: 100;
 
 }
 
 /*Inicio de subir curriculum*/
 .form-container {
+  margin-top: 80px;
   width: 320px;
   border-radius: 0.75rem;
   background-color: rgba(17, 24, 39, 1);
@@ -456,13 +456,6 @@ body{
   height: 1.25rem;
   width: 1.25rem;
   fill: #fff;
-}
-
-.signup {
-  text-align: center;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  color: rgba(156, 163, 175, 1);
 }
 
 /*Fin de subir curriculum*/
