--- a/css/Style.css
+++ b/css/Style.css
@@ -405,6 +405,10 @@ input:valid ~ label {
   top: 20px;
 }
 
+.inputbox input[type="file"]{
+  opacity: 0;
+}
+
 button {
   width: 100%;
   height: 40px;
@@ -438,7 +442,6 @@ button {
   padding: 40px;
   max-width: 1200px;
   margin: 0 auto;
-  
 }
 div.Producto {
  
