--- a/css/Style.css
+++ b/css/Style.css
@@ -167,12 +167,22 @@ body{
   }/*comunidad de la pagina*/
 
   .main-sobrenosotros{
+    background: #2a2a2a;
     min-height: 90vh;
     max-height: max-content;
+    text-align: center;
 
   }
 
-
+  .sobre-nosotros {
+    background: linear-gradient(135deg, #1e1e1e, #2a2a2a);
+    color: #ffffff;
+    padding: 50px;
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+  }
   .texto-section{
     margin-top: 7%;
     
@@ -605,15 +615,7 @@ a.tienda{
   }
 }
 /* Estilo general para la sección */
-.sobre-nosotros {
-  background: linear-gradient(135deg, #1e1e1e, #2a2a2a);
-  color: #ffffff;
-  padding: 50px;
-  font-family: 'Arial', sans-serif;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
+
 
 /* Efecto de partículas */
 .sobre-nosotros::before {
@@ -707,7 +709,7 @@ a.tienda{
   font-size: 1.2em;
   line-height: 1.6;
   margin-bottom: 30px;
-  transition: color 0.3s;
+  transition: color 0.5s;
   z-index: 2;
   position: relative;
 }
@@ -765,8 +767,4 @@ a.tienda{
 @keyframes backgroundAnimation {
   0% { background-position: 0 0; }
   100% { background-position: 100% 100%; }
-}
-
-.sobre-nosotros {
-  animation: backgroundAnimation 10s linear infinite;
 }
