--- a/css/Style.css
+++ b/css/Style.css
@@ -174,15 +174,7 @@ body{
 
   }
 
-  .sobre-nosotros {
-    background: linear-gradient(135deg, #1e1e1e, #2a2a2a);
-    color: #ffffff;
-    padding: 50px;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-  }
+  
   .texto-section{
     margin-top: 7%;
     
@@ -618,17 +610,7 @@ a.tienda{
 
 
 /* Efecto de partículas */
-.sobre-nosotros::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('particles.png') repeat;
-  opacity: 0.1;
-  z-index: 1;
-}
+
 /* Aqui acaba tienda*/
 
 
@@ -718,23 +700,34 @@ a.tienda{
   color: #0571ec;
 }
 
+
+.sobre-nosotros {
+  
+  padding: 50px;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  position: relative;
+
+}
+
 /* Efecto de difuminado dinámico */
-.sobre-nosotros .difuminado {
+.difuminado {
   background: linear-gradient(135deg, #e24c0c, #1e1e1e);
   padding: 20px;
   border-radius: 10px;
   transition: background 0.5s, transform 0.5s;
   z-index: 2;
   position: relative;
+  margin-top: 25px;
 }
 
-.sobre-nosotros .difuminado:hover {
+.difuminado:hover {
   background: linear-gradient(135deg, #1e1e1e, #00ffff);
   transform: scale(1.05);
 }
 
 /* Secciones */
-.sobre-nosotros .seccion {
+.seccion {
   margin: 20px 0;
   padding: 20px;
   border: 2px solid #0062ff; /* Azul neón */
@@ -744,14 +737,14 @@ a.tienda{
   position: relative;
 }
 
-.sobre-nosotros .seccion:hover {
+.seccion:hover {
   background-color: #0062ff; /* Azul neón */
   border-color: #e24c0c;
   box-shadow: 0 0 15px rgba(253, 132, 20, 0.897); /* Sombra azul neón */
 }
 
 /* Enlaces */
-.sobre-nosotros .a {
+.sobre-nosotros a {
   color: #00ffff; /* Azul neón */
   text-decoration: none;
   transition: color 0.3s;
@@ -759,12 +752,8 @@ a.tienda{
   position: relative;
 }
 
-.sobre-nosotros .a:hover {
+.sobre-nosotros a:hover {
   color: #ffffff;
 }
 
-/* Animación de fondo */
-@keyframes backgroundAnimation {
-  0% { background-position: 0 0; }
-  100% { background-position: 100% 100%; }
-}
+/*Fin Sobre nosotros*/
