--- a/css/Style.css
+++ b/css/Style.css
@@ -167,7 +167,9 @@ body{
   }/*comunidad de la pagina*/
 
   .main-sobrenosotros{
-    background: #2a2a2a;
+    background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgroun2.gif) no-repeat center center/cover;
+    height: 90vh;
+    background-size: cover;
     min-height: 90vh;
     max-height: max-content;
     text-align: center;
@@ -178,7 +180,6 @@ body{
     background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgroun2.gif) no-repeat center center/cover;
     height: 90vh;
     background-size: cover;
-    background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)),;
     height: 90vh;
     display: flex;
     justify-content: center;
