--- a/css/Style.css
+++ b/css/Style.css
@@ -167,7 +167,7 @@ body{
   }/*comunidad de la pagina*/
 
   .main-sobrenosotros{
-    background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgroun2.gif) no-repeat center center/cover;
+    background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgroun5.gif) no-repeat center center/cover;
     height: 90vh;
     background-size: cover;
     min-height: 90vh;
@@ -661,7 +661,7 @@ a.tienda{
 
 
 /* Título */
-.sobre-nosotros .h1 {
+.sobre-nosotros h1 {
   font-size: 3em;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -669,10 +669,10 @@ a.tienda{
   position: relative;
   display: inline-block;
   z-index: 2;
-  color: #0a137d; /* Azul neón */
+  color: white; /* Azul neón */
 }
 
-.sobre-nosotros .h1::after {
+.sobre-nosotros h1::after {
   content: '';
   position: absolute;
   width: 100%;
@@ -683,12 +683,12 @@ a.tienda{
   transition: width 0.3s;
 }
 
-.sobre-nosotros .h1:hover::after {
+.sobre-nosotros h1:hover::after {
   width: 0;
 }
 
 /* Texto */
-.sobre-nosotros .p {
+.sobre-nosotros p {
   font-size: 1.2em;
   line-height: 1.6;
   margin-bottom: 30px;
@@ -697,7 +697,7 @@ a.tienda{
   position: relative;
 }
 
-.sobre-nosotros .p:hover {
+.sobre-nosotros p:hover {
   color: #0571ec;
 }
 
@@ -733,6 +733,7 @@ a.tienda{
   padding: 20px;
   border: 2px solid #0062ff; /* Azul neón */
   border-radius: 10px;
+  backdrop-filter: blur(10px);
   transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
   z-index: 2;
   position: relative;
