--- a/css/Style.css
+++ b/css/Style.css
@@ -168,11 +168,11 @@ body{
 
   .main-sobrenosotros{
     background: linear-gradient( rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75),rgba(0,0,0,0), rgba(0,0,0,0)), url(../images/backgroun5.gif) no-repeat center center/cover;
-    height: 90vh;
     background-size: cover;
     min-height: 90vh;
     max-height: max-content;
     text-align: center;
+    background: 100;
 
   }
 
@@ -732,11 +732,11 @@ a.tienda{
   margin: 20px 0;
   padding: 10px;
   border: 2px solid #0062ff; /* Azul neón */
-  border-radius: 10px;
+  border-radius: 20px;
   backdrop-filter: blur(10px);
   transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
   z-index: 2;
-  position:relative;
+  position: relative;
 }
 
 .seccion:hover {
